--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <groupId>com.iot</groupId>
     <artifactId>SpringBoot_lab_05</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
     <name>SpringBootLab5</name>
     <description>Demo project for Spring Boot</description>
 
@@ -49,6 +48,19 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.mypackage.SpringBootLab5Application</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
